fix: fixed alignment issues on product details

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -126,3 +126,9 @@ body {
 #desc-label {
     text-decoration: underline;
 }
+
+.product-details-label {
+    max-width: 200px;
+    margin: 0px auto;
+    margin-top: 15px;
+}
